2007-03-01  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Fix default permissions issue.
	
2007-02-09  Albert Chu  <chu11@llnl.gov>

	* src/libs/modules/metric_module.c (_metric_module_cb),
	src/libs/modules/event_module.c (_event_module_cb),
	src/libs/modules/monitor_module.c (_monitor_module_cb): Fix static
	compile bug.

	* src/cerebrod/cerebrod_speaker.c: Remove pthread use when
	--with-cerebrod-no-threads is used.

	* src/libs/modules/metric_module.c: Fix various static module
	build issues.

	* src/modules/event/Makefile.am: Fix static build bug.
	
2007-02-08  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Add cerebrod restart fix.  Fix ppc64 packaging issue.
	
2007-02-06  Albert Chu  <chu11@llnl.gov>

	* src/modules/clusterlist/cerebro_clusterlist_genders_util.h,
	src/modules/clusterlist/cerebro_clusterlist_genders_util.c
	(cerebro_clusterlist_genders_setup): Add filename parameter.

	* src/modules/clusterlist/cerebro_clusterlist_genders.c: Adjust
	for new function call appropriately.
	
2006-12-21  Albert Chu  <chu11@llnl.gov>

	* src/libs/wrappers/wrappers.c (wrap_select): Fix bug then could
	cause select() spinning.

	* tagged cerebro-1-1-4
	
2006-12-20  Albert Chu  <chu11@llnl.gov>

	* Fix various compiler warnings.
	
2006-12-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_event_server.c
	(_send_event_names_end_response): Fix compiler warnings.
	
	* tagged cerebro-1-1-3

2006-12-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_speaker): Fix bug that
	could cause the loop to spin for small periods of time.

	* tagged cerebro-1-1-2
	 
2006-12-19  Albert Chu  <chu11@llnl.gov>

	* NEWS updated.

	* config/ac_updown_event.m4: Fix typo.

	* config/ac_updown.m4: Renamed from ac_updown_event.m4 and
	modified appropriately for name change.

	* configure.ac, src/modules/event/Makefile.am: Updated
	appropriately.

	* cerebro.spec.in: Support updown event module.

	* tagged cerebro-1-1-1
