@@ -1,3 +1,7 @@
+2007-04-02  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_listener_data.c: Fix race condition.
+	
 2007-03-01  Albert Chu  <chu11@llnl.gov>
 
 	* cerebro.spec.in: Fix default permissions issue.
